# Euterpea_Projects

./: .gitignore  AMixer.lhs  Bond.mid  CCA.lhs  CCA_main_tests.hs  CCA_tests.hs  ExperimentalMidi.lhs  HW2.lhs  HW3.lhs  HW4.lhs  HW5.lhs  HW8.lhs  Helm_test.lhs  Mixer.lhs  README.md  SampleSeq.lhs  Spatializer.lhs  Tousainnt.lhs  Typeclasses.lhs  _vimrc  flappy.hs  helmMixer.lhs  pong.hs  pong2.hs  readMidi.lhs  small.lhs  test.hs  test.html
CCA/: Main  Main.hs  Makefile  Sample.as  Sample.hs  Sample1.hs
HW/: HW1.lhs  HW3.lhs  HW5.lhs  HW6.lhs  HW7.lhs  HW8.lhs
Parallel/: AMixer.lhs  Breakout.lhs  ExperimentalMidi.lhs  ForeverMidi.lhs  GameSound.lhs  GameSound2.lhs  MainRunner.lhs  MidiMixer.lhs  PWav.lhs  SampleSeq.lhs  banana.hs  flappy.hs
Parallel/Sequencer/: ElereaSequencer.lhs  MidiSequencer.lhs  UISFSequencer.lhs
Parallel/old/: Mixer.lhs  SampleSeq.lhs
QuantumArt/: Buttons.hs  HandmadeMain.hs  Main.hs  Mealy.hs  QArt.blend  SynthMain.hs  Types.hs  Yampa-example.cabal
QuantumArt/paper/: .IEEEtran.cls.swp  biblio.bib  main.bbl  main.blg  main.out  main.tex  main2.tex  preamble.tex  sigplanconf.cls
QuantumArt/paper/secs/: bio.tex  desc.tex  intro.tex
Reading/: Bond2.mid  FugueGM.Mid  ImportHelp.lhs  README  TurkishMarch.mid  readMidi.lhs  testOut.mid
TransGame/: .gitignore  Buttons.hs  GameLogic.hs  GlossInterface.hs  HandmadeMain.hs  ImageIO.hs  LevelMaps.hs  Main.hs  README  Render.hs  TransGame.cabal  TransGame.hp  TransGame.ps  Types.hs  test.hs
TransGame/paper/: main_ieee.tex
TransGame/paper/secs/: desc.tex
TransGame/src/: GameController.hs  GameLogic.hs  InitGameState.hs  Main.hs  Settings.hs
TransGame/src/Input/: Input.hs
TransGame/src/Render/: GlossInterface.hs  ImageIO.hs  Render.hs
TransGame/src/Types/: Common.hs  GameObj.hs  GameObjs.hs  HasImage.hs  Types.hs
Yampa-slider/: Buttons.hs  GlossInterface.hs  HandmadeMain.hs
authorCounts/: CAV15  CAV16  FMCAD15  FMCAD16  Main.hs
elerea-examples-2.2.3/doc/: Breakout.html  Chase.html
elerea-examples-2.2.3/src/: Breakout.lhs
kinect/: KinectModule.hs  Kmod.hs  README  soundM.lhs  test2.hs
live/: LICENSE  Live.cabal  Main.lhs  UiExtras.hs  live.lhs
live_coding/: LiveCoding.lhs  test.hs  test.lhs
reactiveSynth/: ffi.hs  test.hs  types.hs
threepennytest/: CHANGELOG.md  Currency.hs  Main-old.hs  Main.hs  TimerControl.hs  threepennytest.cabal
threepennytest/dist-newstyle/cache/: config
tidal/: convert.lhs
