name:                TransGame
version:             0.1.0.0
license:             PublicDomain
author:              Mark Santolucito
maintainer:          mark.santolucito@yale.edu
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

executable TransGame
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.9
                     , gloss >=1.9.2.1
                     , gloss-juicy >= 0.2.2
                     , gloss-algorithms >=1.9.2.1
                     , Yampa >= 0.9.3
                     , random >= 1.1
                     , directory >= 1.3
                     , lens >= 4.14
                     , containers >= 0.5.8.1
                     , JuicyPixels>= 3.2.8
                     , unordered-containers >= 0.2.8.0
                     , hashable >= 1.2.6.0
  default-language:    Haskell2010
  ghc-options: 
    -W 
    -Wall 
    -O 
    -fprof-auto
    -rtsopts
    "-with-rtsopts= -s -h -i0.1"

